[package]
name = "device-state-exchange-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
dyn-clone = "1.0.19"
downcast-rs = "2.0.1"
hashbrown = { version = "0.15.4", features = ["nightly", "serde"] }
serde_json = "1.0.142"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
