[package]
name = "device-state-exchange-lib"
version = "0.2.0"
edition = "2024"

[dependencies]
dyn-clone = "*"
downcast-rs = "*"
hashbrown = { version = "*", features = ["nightly", "serde"] }
serde_json = "*"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
